# python-ooouno-ex

./: .env  .gitignore  .root_token  LICENSE  README.md  config.json  config.py  conftest.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  startup.sh
.devcontainer/res/defaults/: registrymodifications.xcu
.devcontainer/res/ext/: apso.oxt
.devcontainer/res/req/: requirements.txt
.devcontainer/res/scripts/: lo_console.py
checks/: chk_msgbox.py  root_path.py
cmds/: uno_lnk.py
ex/: README.md
ex/auto/: README.md
ex/auto/calc/: README.md
ex/auto/chart/: README.md
ex/auto/chart2/: README.md
ex/auto/draw/: README.md
ex/auto/forms/: README.md
ex/auto/general/: README.md
ex/auto/impress/: README.md
ex/auto/writer/: README.md
ex/calc/: README.md
ex/calc/cell_events/: Makefile  README.md  cell_events.ods  config.json  script.py
ex/calc/lib_o_con_2021/: Makefile  README.md  config.json  lib_o_con_2021.ods  lib_o_con_2021_calc.py
ex/calc/odev_add_range_data/: Makefile  README.md  config.json  odev_add_range.ods  range_action.py  run.py  script.py
ex/calc/sudoku/: Makefile  README.md  calc-sudoku.ods  config.json  script.py  sudoku.py  sudoku_calc.py
ex/dialog/: README.md
ex/dialog/dialog_menu/: Makefile  README.md  config.json  macro_code.py  start.py
ex/dialog/grid/: Makefile  README.md  config.json  config_ooodev.json  grid_ex.py  script.py  start.py
ex/dialog/progress_scroll/: README.md  progress.py  start.py
ex/dialog/radio_gropubox/: README.md  radio_group_box.py
ex/dialog/radio_groupbox/: README.md  radio_group_box.py  start.py
ex/dialog/radio_groupbox2/: Makefile  README.md  config.json  config_ooodev.json  radio_group_box.py  script.py  start.py
ex/dialog/tabs_list_box/: Makefile  README.md  config.json  config_ooodev.json  listbox.py  listbox_drop_down.py  listbox_multi_select.py  script.py  start.py  tab_dialog.py
ex/dialog/tree/: Makefile  README.md  config.json  config_ooodev.json  script.py  start.py  (+5 more)
ex/general/: README.md
ex/macro/: README.md
macro/: dbs.py  ooodev_calc_hyperlinks.py  ooodev_ex.py  pyglobal.py
macro/calc_ctl_focus/: focus.py
macro/draw/: rotate_shape.py
resources/: __init__.py
resources/data/: bpts0.txt  bpts1.txt  pointsInfo.txt  produceSales.ods  sorted.csv
resources/odb/: Example_Sport.odb  liang.odb
resources/ods/: totals.ods
resources/odt/: badGrammar.odt  blank.odt
resources/presentation/: points.odp
resources/video/: clock.avi
src/cmds/: run_auto.py  uno_lnk.py
src/examples/: README.md  msgbox.py
src/lib/: connect.py  enums.py  ooo_util.py  sel.py  writer_sel_framework.py
src/models/: model_type_enum.py  validators.py
src/utils/: color.py  enum_util.py  uno_util.py  util.py
tests/: conftest.py  test_color.py  test_odt_manifest.py
(+403 files in other folders)
